# openlatch-sectools

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  commitlint.config.js  openlatch-provider.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: auto-format.sh  type-check.sh
.claude/rules/: ci-release.md  documentation-sync.md  error-handling.md  logging.md  naming-conventions.md  openlatch-architecture.md  security-constraints.md  tech-stack.md  telemetry.md  testing.md  tool-authoring.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: BUG.yml  FEATURE.yml  config.yml
.github/workflows/: cleanup-fly-machines.yml  cleanup-ghcr.yml  deploy.yml  pr-checks.yml  release-please.yml
fly/: fly.production.toml  fly.staging.toml
scripts/: register-and-sync-secrets.sh  render-staging-manifest.py  verify-no-stale-machines.sh
tools/attack-path-guard/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/attack-path-guard/src/attack_path_guard/: __init__.py  detect.py  main.py
tools/attack-path-guard/tests/: test_corpus.py  test_main.py
tools/coinflip-tool/: README.md  openlatch-tool.yaml  pyproject.toml
tools/coinflip-tool/src/coinflip_tool/: __init__.py  main.py
tools/coinflip-tool/tests/: test_main.py
tools/config-guard/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/config-guard/src/config_guard/: __init__.py  detect.py  main.py
tools/config-guard/tests/: test_corpus.py  test_main.py
tools/pii-scanner/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/pii-scanner/src/pii_scanner/: __init__.py  detect.py  main.py
tools/pii-scanner/tests/: test_corpus.py  test_main.py
tools/prompt-injection-guard/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/prompt-injection-guard/src/prompt_injection_guard/: __init__.py  detect.py  main.py
tools/prompt-injection-guard/tests/: test_corpus.py  test_main.py
tools/secrets-detector/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/secrets-detector/src/secrets_detector/: __init__.py  detect.py  main.py
tools/secrets-detector/tests/: test_corpus.py  test_main.py
tools/shell-guard/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/shell-guard/src/shell_guard/: __init__.py  detect.py  main.py
tools/shell-guard/tests/: test_corpus.py  test_main.py
tools/tool-integrity/: CHANGELOG.md  README.md  openlatch-tool.yaml  pyproject.toml
tools/tool-integrity/src/tool_integrity/: __init__.py  detect.py  main.py
tools/tool-integrity/tests/: test_corpus.py  test_main.py
