[project]
name = "attack-path-guard"
version = "0.2.0"
description = "OpenLatch attack-path analysis tool — MCPhound-style reachability graph detection"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "openlatch-tool-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
attack-path-guard = "attack_path_guard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attack_path_guard"]

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[tool.pytest.ini_options]
addopts = "--cov=attack_path_guard --cov-report=xml --cov-report=term-missing -ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["attack_path_guard"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
