[project]
name = "coinflip-tool"
version = "0.1.0"
description = "OpenLatch synthetic detection tool — randomly returns allow/deny verdicts"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openlatch-tool-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
coinflip-tool = "coinflip_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coinflip_tool"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=coinflip_tool --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["coinflip_tool"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
