[project]
name = "config-guard"
version = "0.2.0"
description = "OpenLatch detection tool — configuration-plane threat detection"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "openlatch-tool-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
config-guard = "config_guard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config_guard"]

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[tool.pytest.ini_options]
addopts = "--cov=config_guard --cov-report=xml --cov-report=term-missing -ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["config_guard"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
