[project]
name = "pii-scanner"
version = "0.1.0"
description = "OpenLatch PII detection tool — detects email, SSN, credit card, phone, IP in agent actions"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32",
    "openlatch-tool-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.6",
]
ml = [
    "presidio-analyzer>=2.2",
]

[project.scripts]
pii-scanner = "pii_scanner.main:main"

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_scanner"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=pii_scanner --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pii_scanner"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
