[project]
name = "prompt-injection-guard"
version = "0.1.0"
description = "OpenLatch prompt-injection detection tool — regex + optional DeBERTa scan"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "openlatch-tool-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
ml = ["llm-guard>=0.3"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
prompt-injection-guard = "prompt_injection_guard.main:main"

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_injection_guard"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=prompt_injection_guard --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["prompt_injection_guard"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
