[project]
name = "secrets-detector"
version = "0.2.0"
description = "OpenLatch detection tool — regex-based credential and secret detection in agent tool calls"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openlatch-tool-sdk",
]

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
secrets-detector = "secrets_detector.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secrets_detector"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=secrets_detector --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["secrets_detector"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
