[project]
name = "tool-integrity"
version = "0.1.0"
description = "OpenLatch tool-integrity detector — poison, typosquatting, and hash-drift detection"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "openlatch-tool-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-Levenshtein>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
tool-integrity = "tool_integrity.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_integrity"]

[tool.uv.sources]
openlatch-tool-sdk = { path = "../../vendor/openlatch-tool-sdk" }

[tool.pytest.ini_options]
addopts = "--cov=tool_integrity --cov-report=xml --cov-report=term-missing -ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tool_integrity"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
